Overflow auto, to avoid scrollbars in Safari.

--- a/app/assets/stylesheets/adminsite/admin/base.scss
+++ b/app/assets/stylesheets/adminsite/admin/base.scss
@@ -57,7 +57,7 @@ body.adminsite {
   }
   #wrapper {
     margin: 0 20px;
-    overflow: scroll;
+    overflow: auto;
   }
   hr {
     border: dashed black;
